update wip tri dossiers

--- a/_emailing_master.html
+++ b/_emailing_master.html
@@ -33,7 +33,7 @@ img {display:block;}
 			<td bgcolor="#f2f2f2">
 				<h1><a href="https://www.lafabriquedunet.fr/email-marketing/guide/coder-email-html-css/">https://www.lafabriquedunet.fr/email-marketing/guide/coder-email-html-css/</a></h1>
 
-				<img src="img/image.jpg" alt="BIEN REMPLIR">
+				<img src="img/image.jpg" width="200" height="10" alt="BIEN REMPLIR">
 				<h2>Mettre le CSS en inline & développer les propriétés CSS</h2>
 				<p style="font-size: 15px; font-weight: bold; font-family: arial, times, serif">paragraphe stylisé avec css inline</p>
 				
