emailing add info img width and height PX

--- a/_emailing_master.html
+++ b/_emailing_master.html
@@ -27,13 +27,16 @@ img {display:block;}
 <body>
 	<table cellspacing="0" cellpadding="0" border="0" width="100%">
 		<tr>
+			<td>Outil LITMUS</td>
+		</tr>
+		<tr>
 			<td>Pour optimiser au mieux l’affichage de la couleur d’arrière-plan, il est recommandé de définir la couleur d’arrière-plan dans un tableau séparé enveloppant tout votre template de mail (tableau principal). Définissez pour ce tableau une largeur de 100%.</td>
 		</tr>
 		<tr>
 			<td bgcolor="#f2f2f2">
 				<h1><a href="https://www.lafabriquedunet.fr/email-marketing/guide/coder-email-html-css/">https://www.lafabriquedunet.fr/email-marketing/guide/coder-email-html-css/</a></h1>
 
-				<img src="img/image.jpg" width="200" height="10" alt="BIEN REMPLIR">
+				<img src="img/image.jpg" width="200px" height="10px" alt="BIEN REMPLIR et bien mettre px pour with and height !!">
 				<h2>Mettre le CSS en inline & développer les propriétés CSS</h2>
 				<p style="font-size: 15px; font-weight: bold; font-family: arial, times, serif">paragraphe stylisé avec css inline</p>
 				
@@ -51,7 +54,7 @@ img {display:block;}
 						<td>eviter balises tbody, rowspan, colspan...</td>
 					</tr>
 					<tr>
-						<td width="200" style="font-weight:bold; font-size:1em; line-height:1.2em; font-family:georgia,'times',serif;">Pour bien faire ressortir les textes clés de votre email, intégrez ces textes en inline dans la cellule concernée. Evitez la balise < p ></td>
+						<td width="200px" style="font-weight:bold; font-size:1em; line-height:1.2em; font-family:georgia,'times',serif;">Pour bien faire ressortir les textes clés de votre email, intégrez ces textes en inline dans la cellule concernée. Evitez la balise < p ></td>
 					</tr>
 				</table>
 
